fix squished images on larger screens

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -474,6 +474,7 @@ $port-marg-vert: $pad;
 
     img {
       width: 100%;
+      height: auto;
       display: block;
       margin-bottom: -1px;
     }
